--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "viida",
   "displayName": "viida",
-  "description": "viida light theme",
+  "description": "Light theme for daily use",
   "license": "MIT",
   "icon": "icon.png",
   "publisher": "viida",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "engines": {
     "vscode": "^1.81.0"
   },
